<resources>
    <string name="app_name">Nmedia</string>
    <string name="hello">Nmedia!</string>
    <string name="user_s_avatar">User\'s avatar</string>
    <string name="option_button">option button</string>
    <string name="like_button">like button</string>
    <string name="share_button">share button</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="description_post_like">button save, insert</string>
    <string name="edit">Edit</string>
    <string name="edit_post">Edit post</string>
    <string name="cancel_edit">cancel edit</string>
    <string name="share_chooser">Share post</string>
    <string name="description_post_save">ok</string>
    <string name="add_post">Add post</string>
    <string name="video">Play video </string>
    <string name="watch_video">Watch video</string>
    <string name="add_video_url">Add video URL</string>
    <string name="text_post">Post text</string>
</resources>