<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_size">

    <ImageView
        android:id="@+id/postAvatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/user_s_avatar"
        app:layout_constraintBottom_toBottomOf="@id/postTopBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_avatar_24"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_size"
        android:layout_marginEnd="@dimen/common_size"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/postDate"
        app:layout_constraintEnd_toStartOf="@id/postOptionButton"
        app:layout_constraintStart_toEndOf="@id/postAvatar"
        app:layout_constraintTop_toTopOf="@id/postAvatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Long Long TextView" />

    <TextView
        android:id="@+id/postDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:paddingBottom="4dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/postAvatar"
        app:layout_constraintEnd_toEndOf="@id/postUserName"
        app:layout_constraintStart_toStartOf="@id/postUserName"
        app:layout_constraintTop_toBottomOf="@id/postUserName"
        tools:text="TextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/postOptionButton"
        style="@style/Widget.AppTheme.Option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/option_button"
        app:icon="@drawable/ic_options_button_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/postTopBarrier"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/postTopBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="postAvatar, postDate, postOptionButton" />

    <TextView
        android:id="@+id/postText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:paddingTop="@dimen/common_size"
        android:paddingBottom="@dimen/common_size"
        app:layout_constraintTop_toBottomOf="@id/postTopBarrier"
        app:layout_constraintBottom_toTopOf="@id/postVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/postBottomBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="postText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/postLikeButton"
        style="@style/Widget.AppTheme.LikeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/like_button"
        android:checkable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postBottomBarrier"
        tools:text="100"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/postShareButton"
        style="@style/Widget.AppTheme.ShareCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/share_button"
        android:layout_marginTop="@dimen/common_size"
        app:layout_constraintStart_toEndOf="@id/postLikeButton"
        app:layout_constraintTop_toBottomOf="@id/postBottomBarrier"
        tools:text="500"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/postViewEyeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_eye_image_24"
        app:layout_constraintTop_toBottomOf="@id/postBottomBarrier"
        app:layout_constraintEnd_toStartOf="@id/postNumberView"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="@dimen/common_size"
        android:paddingTop="@dimen/common_size" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postNumberView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/postBottomBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/common_size"
        android:paddingTop="@dimen/common_size"
        tools:text="10K" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/postVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/video"
        android:background="#000000"
        android:src="@drawable/ic_video"
        app:layout_constraintBottom_toTopOf="@id/postBottomBarrier"
        app:layout_constraintTop_toBottomOf="@id/postText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/postPlayButton"
        style="@style/Widget.AppTheme.PlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:icon="@drawable/ic_play_button_24"
        app:layout_constraintBottom_toBottomOf="@id/postVideo"
        app:layout_constraintEnd_toEndOf="@id/postVideo"
        app:layout_constraintStart_toStartOf="@id/postVideo"
        app:layout_constraintTop_toTopOf="@id/postVideo" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/video_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="postVideo, postPlayButton"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>